crates/ruff_python_ast/tests/snapshots/parenthesize__parenthesized_name.snap
---
source: crates/ruff_python_ast/tests/parenthesize.rs
expression: parenthesized
---
Some(
    0..3,
)
