crates/ruff_python_ast/tests/snapshots/parenthesize__parenthesized_tuple_member.snap
---
source: crates/ruff_python_ast/tests/parenthesize.rs
expression: parenthesized
---
Some(
    4..7,
)
