crates/ruff_python_ast/tests/snapshots/parenthesize__twice_parenthesized_argument.snap
---
source: crates/ruff_python_ast/tests/parenthesize.rs
expression: parenthesized
---
Some(
    2..11,
)
