crates/ruff_python_ast/tests/snapshots/parenthesize__twice_parenthesized_name.snap
---
source: crates/ruff_python_ast/tests/parenthesize.rs
expression: parenthesized
---
Some(
    0..5,
)
